hphp/hack/test/typecheck/explicit_type_collection/explicit_type_collection_wildcard_vec2.php.exp
File "explicit_type_collection_wildcard_vec2.php", line 5, characters 7-19:
Invalid argument (Typing[4110])
File "explicit_type_collection_wildcard_vec2.php", line 3, characters 18-20:
Expected int
File "explicit_type_collection_wildcard_vec2.php", line 5, characters 14-18:
But got string
