hphp/hack/test/typecheck/explicit_type_collection/explicit_type_collection_wildcard_vec2.php
<?hh
// Copyright 2004-present Facebook. All Rights Reserved.
function foo(vec<int> $x): void {}
function bar(): void {
  foo(vec<_>["foo"]);
}
